# histogrammar-python

./: .gitignore  .travis.yml  CHANGES.rst  FIXME.txt  NOTICE  README.md  README.rst  makedocs.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  testcuda.cu  testcuda2.cu
.github/workflows/: test.yml
docs/: Makefile  conf.py  index.rst  make.bat  makeRST.py
generate-grammars/: grammar_to_ply.py
generate-grammars/python-awk/: hgawk_test.py  python2.g  python2_actions.py  python2_hgawk.g  python2_test.py  python3_actions.py
histogrammar/: __init__.py  convenience.py  defs.py  hgawk_grammar.py  hgawk_grammar_table.py  histogram.py  parsing.py  python23_lex.py  resources.py  sparksql.py  specialized.py  util.py  version.py
histogrammar/dfinterface/: __init__.py  addmethods.py  filling_utils.py  histogram_filler_base.py  make_histograms.py  pandas_histogrammar.py  spark_histogrammar.py
histogrammar/notebooks/: histogrammar_tutorial_advanced.ipynb  histogrammar_tutorial_basic.ipynb  histogrammar_tutorial_exercises.ipynb
histogrammar/plot/: bokeh.py  hist_numpy.py  matplotlib.py  mpl.py  root.py
histogrammar/plot/js/: nodejs.py
histogrammar/plot/vega/: __init__.py  jsontrans.py  nodejs.py
histogrammar/primitives/: absoluteerr.py  adaptivebin.py  average.py  bag.py  bin.py  categorize.py  centralbin.py  centrallybin.py  collection.py  count.py  deviate.py  fraction.py  irregularlybin.py  limit.py  minmax.py  partition.py  quantile.py  sample.py  select.py  sparsebin.py  sparselybin.py  stack.py  sum.py
histogrammar/pycparser/: lextab.py  yacctab.py
histogrammar/tutorial/: cmsdata.py
scripts/: hgwatch
test/: __init__.py  autogenerated.py  basic.py  original.py  specification.py  test.py  testbasic.py  testgpu.py  testnumpy.py  testrootcling.py  testspec.py
tests/: conftest.py  flat.root  test_basic.py  test_gpu.py  test_notebooks.py  test_numpy.py  test_pandas_histogrammar.py  test_rootcling.py  test_spark_histogrammar.py  test_spec.py  testbasic.py  testgpu.py  testnumpy.py  testrootcling.py  testspec.py
